updated health endpoint such that it is included in swagger docs
