# src/swagger.json
@@ -194,6 +194,25 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/health": {
+			"get": {
+				"operationId": "Health",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/getDosageProposalResult": {
 			"post": {
 				"operationId": "GetDosageProposalResult",
